# pastelid_signer

./: .gitignore  Cargo.toml  README.md  config.ini  prompt_for_pastel_signer.md  pyproject.toml
src/: lib.rs
test_secure_container_file/: jXXfLwrL7s7BQpm1uapzhKirt2HaRAse8Wru8pRLcGLonmZ996xNzAPJBjR6wfVXVzVFWn3NwA79gyAB5BptJ7
